tests/NormalTests/paczka2/big_fuzzy/14821856.err
Error in line 4: 3nPx3 A704 78,4
Error in line 16: 3nPx3 S163 5,4
Error in line 25: 6dorP A704 35,4
Error in line 32: ySS4Ub1bA01 A704 25,7
Error in line 39: ySS4Ub1bA01 S674 67,9
Error in line 47: 3nPx3 S163 25,5
Error in line 48: 3nPx3 A704 57,9
Error in line 51: S163 S163 -4,6
Error in line 57: RgoCKbsaW S674 6,9
Error in line 53: ySS4Ub1bA01 S674 39,7
Error in line 70: 6dorP S674 97,6
Error in line 82: 3p4lpXV A704 58,29
Error in line 77: v4p4CVO0 A117 28,4
Error in line 46: S163 S163 67,8
Error in line 66: 3p4lpXV A704 13,6
Error in line 96: ySS4Ub1bA01 S674 661,0
Error in line 107: 6dorP S67E 11,7
Error in line 111: 6dorP A704 22,5
Error in line 119: 6dorP A117 72,9
Error in line 114: 3nPx3 S674 25,4
Error in line 125: 3p4lpXV S674 293,6
Error in line 135: 3nPx3 A704 80,0
Error in line 134: 3p4lpXV A704 17,9
Error in line 113: S163 A117 43,6
Error in line 137: ySS4Ub1bA01 S674 64,9
Error in line 159: 3p4lpXV A117 98,3
Error in line 158: S163 A704 50,1
Error in line 153: 3nPx3 S674 1,3
Error in line 166: 6dorP S674 59,2
Error in line 173: RgoCKbsaW S674 92,8
Error in line 161: 3p4lpXV S163 729,1
Error in line 163: 3nPx3 A704 19,4
Error in line 176: 3p4lpXV S674 59,4
Error in line 171: 6dorP A704 66,0
Error in line 177: 3nPx3 S674 37,0
Error in line 169: v4p4CVO0 A117 97,3
Error in line 187: RgoCKbsaW S67/ 9/,9
Error in line 188: S163 A117 47,46
Error in line 185: S163 A117 20,7
Error in line 191: S163 A704 8,8
Error in line 193: S163 A117 2,6
Error in line 198: 6dorP S163 1,7
Error in line 211: ySS4Ub1bA01 S163 42,7
Error in line 212: 3nPx3 A117 50,2
Error in line 204: RgoCKbsaW S674 162,3
Error in line 230: 3p4lpXV A704 52,7
Error in line 238: S163 S163 83,2
